# gcc-vec

./: CMakeLists.txt  benchmark.sh  generate_mandelbrot_reports.sh  generate_raports.sh  generate_simple_example_reports.sh  vectorization_info.sh
assembly/: opt_mandelbrot.s  unopt_mandelbrot.s
assembly/loop/: control_flow_nopt_simple.s  control_flow_nopt_simple_basic.s  entry_exit_nopt_simple.s  entry_exit_nopt_simple_basic.s  loop1_aligned_simple.s  loop1_aligned_simple_basic.s  loop1_nopt_simple.s  loop1_nopt_simple_basic.s  loop1_opt_simple.s  loop1_opt_simple_basic.s  loop2_nopt_simple.s  loop2_nopt_simple_basic.s  loop2_opt_simple.s  loop2_opt_simple_basic.s  loop_basic_simple.s  loop_basic_simple_basic.s  loop_basic_small_simple.s  loop_basic_small_simple_basic.s  loop_fmod_nopt_simple.s  loop_fmod_nopt_simple_basic.s  loop_sin_opt_simple.s  loop_sin_opt_simple_basic.s  loop_sqrtf_opt_simple.s  loop_sqrtf_opt_simple_basic.s  nested_loop_simple.s  nested_loop_simple_basic.s  non_continous_nopt_simple.s  non_continous_nopt_simple_basic.s  object_array_simple.s  object_array_simple_basic.s  read_after_write_simple.s  read_after_write_simple_basic.s  while_nopt_simple.s  while_nopt_simple_basic.s
assembly/mandelbrot/: opt_mandelbrot.s  unopt_mandelbrot.s
benchmarks/: auto_vec.txt
docs/: info.txt  mmx-info.txt  sources.txt  sse-info.txt
docs/env-info/: avx_info.txt  gcc_loop_tiling_support.txt  opt_factors.txt  proc_info.txt
docs/todo/: todo_1
reports/: opt_mandelbrot_loop.miss  opt_mandelbrot_loop.opt  opt_mandelbrot_vec.opt  unopt_mandelbrot_loop.miss  unopt_mandelbrot_loop.opt  unopt_mandelbrot_vec.opt
reports/loop/: control_flow_nopt_simple_vec.miss  entry_exit_nopt_simple_vec.miss  loop1_aligned_simple_vec.miss  loop1_aligned_simple_vec.opt  loop1_nopt_simple_vec.miss  loop1_nopt_simple_vec.opt  loop1_opt_simple_vec.miss  (+17 more)
src/auto-vectorize-example/: CMakeLists.txt  main.cpp
src/mandelbrot/optimized/: CMakeLists.txt  main.cpp  opt_mandelbrot.cpp  opt_mandelbrot.h
src/mandelbrot/unoptimized/: CMakeLists.txt  main.cpp  unopt_mandelbrot.cpp  unopt_mandelbrot.h
(+39 files in other folders)
